--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
